  * Move participant ID to the front of their format string.
  * Remove printouts from navbar when disallowed
  * Add basic styling to forms.
  * Drastically increase dashboard font.
  * Add basic unit tests
  * Add registration by QR codes
  * Add summarized Ansible logs
  * Add participant IDs to Ansible inventory
  * Add option to disable autoregistration via healthcheck

 -- Michał Sidor <michcioperz@asirpa.iscute.ovh>  Mon, 17 Feb 2020 20:16:24 +0100

oi-bus (0.1.17) unstable; urgency=medium

  * Fix tag printing.

 -- Michał Sidor <michcioperz@lain.iscute.ovh>  Mon, 10 Feb 2020 13:58:33 +0100

oi-bus (0.1.16) unstable; urgency=medium

  * Add logging config to prod_settings.py

 -- Wojciech Dubiel <w.dubiel@fri.edu.pl>  Sun, 09 Feb 2020 21:29:51 +0100

oi-bus (0.1.15) unstable; urgency=medium

  * Add delete_computers and delete_printouts
  * Add --merge option to import_computers
  * Add move_participant

 -- Wojciech Dubiel <w.dubiel@fri.edu.pl>  Fri, 07 Feb 2020 18:07:31 +0100

oi-bus (0.1.14) unstable; urgency=medium

  * Add import_computers.

 -- Michał Sidor <michcioperz@lain.iscute.ovh>  Fri, 07 Feb 2020 13:25:48 +0100

oi-bus (0.1.13) unstable; urgency=medium

  * Chown /var/lib/oi-bus in postinst just to be sure

 -- Wojciech Dubiel <w.dubiel@fri.edu.pl>  Mon, 03 Feb 2020 19:23:25 +0100

oi-bus (0.1.12) unstable; urgency=medium

  * Prepend 'c' to computer nice name when generating a hostname
  * Fix a few HTTP 500 errors
  * Add oi {upload,download,backupzaw} subcommands
  * Add oi {update,backup} subcommands
  * Add oi {shutdown,wake} subcommands
  * Don't quote env vars in printed commands, so that they can be copied to shell
  * Add --ask/--no-ask and --dry-run options

 -- Wojciech Dubiel <w.dubiel@fri.edu.pl>  Mon, 03 Feb 2020 11:58:36 +0100

oi-bus (0.1.11) unstable; urgency=medium

  * Autogenerate ansible host names from IP addresses
  * Add oi command

 -- Michał Sidor <michcioperz@asirpa.iscute.ovh>  Sun, 02 Feb 2020 14:14:53 +0100
