@@ -39,6 +39,15 @@
 </footer>
 </nav>
 <div class="container" role="presentation">
+    {% if messages %}
+    <ul class="messages">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>
+            {{ message }}
+        </li>
+        {% endfor %}
+    </ul>
+    {% endif %}
     <main>
         {% block main %}{% endblock main %}
     </main>
